--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "node app.js",
     "seedProduction": "cross-env NODE_ENV=production node seeder.js",
     "seed": "node seeder.js",
     "start": "node app.js"
