--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+BASE_URI=http://localhost
+WEB_PORT=2020
 MONGODB__PRODUCTION_URI = mongodb+srv://admin:admin@wine.eqvmg4e.mongodb.net/?retryWrites=true&w=majority
 MONGODB_URI=mongodb+srv://admin:admin@work.8oijiin.mongodb.net/?retryWrites=true&w=majority
 
