--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "databases-starter-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
     "seedProduction": "cross-env NODE_ENV=production node seeder.js",
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.5"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -23,10 +23,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.17.1",
     "loading-cli": "^1.1.0",
     "md5": "^2.3.0",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.10"
+    "mongoose": "^6.7.3"
   }
 }
